# MyjavaJni1

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/yaphet/myjavajni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/yaphet/myjavajni/: JNI.java  MainActivity.java
app/src/main/jni/: myjni.c  myjni.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/yaphet/myjavajni/: ExampleUnitTest.java
